--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Nirsa - Inicio</title>
+    <title>Mares Limpios - Inicio</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -18,7 +18,6 @@
         <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button">X</a>
         <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">Inicio</a>
         <a href="sobrenosotros.html" onclick="w3_close()" class="w3-bar-item w3-button">Sobre Nosotros</a>
-        <a href="sobrenosotros.html#proyectos" onclick="w3_close()" class="w3-bar-item w3-button">Proyectos</a>
     </nav>
 
     <!-- Top menu -->
@@ -40,7 +39,9 @@
             <img class="w3-image" src="static/images/peces.png" width="1500">
             <div class="w3-display-middle" id="bannerelem">
                 <h1 class="titulo" style="color: #FFF;">Mares Limpios</h1>
-                <a href="sobrenosotros.html#proyectos"><button id="conoceproyectos" class="w3-button">Conoce los proyectos</button></a>
+                <a href="sobrenosotros.html#proyectos">
+                    <button id="conoceproyectos" class="w3-button">Conoce los proyectos</button>
+                </a>
                 <img style="margin-top: 5%;" src="static/images/statistics.svg" width="100%">
             </div>
         </div>
@@ -115,6 +116,8 @@
 
         <h1 class="titulo" style="margin: 5% 0 5% 0;">Impulsores del proyecto de mesa del ODS14</h1>
         <div id="impulsores" style="width: 100%; align-items: center; justify-items: center; margin: 5% 0 5% 0;">
+            <img src="static/images/impulsores/nirsa.png">
+            <img src="static/images/impulsores/ecotec.png">
             <img src="static/images/impulsores/tunacons.png">
             <img src="static/images/impulsores/ismac.png">
             <img src="static/images/impulsores/chaplains.jpeg">
@@ -123,6 +126,8 @@
         </div>
 
         <div id="carrusel" class="w3-content w3-section" style="max-width:500px;">
+            <img class="mySlides" src="static/images/impulsores/nirsa.png">
+            <img class="mySlides" src="static/images/impulsores/ecotec.png">
             <img class="mySlides" src="static/images/impulsores/tunacons.png">
             <img class="mySlides" src="static/images/impulsores/ismac.png">
             <img class="mySlides" src="static/images/impulsores/chaplains.jpeg">
@@ -139,10 +144,14 @@
             <div class="w3-display-bottommiddle footerelem">
                 <img src="static/images/logo footer.png">
                 <div>
-                    <h1 style="margin-bottom: 0; font-weight: 600; color:#0E7ABF; font-family: 'CHEDROS', sans-serif;">¡Infórmate más!</h1>
-                    <p style="margin-top: 0; font-weight: 600;">Para obtener información sobre nuestros eventos y causas:</p>
+                    <h1 style="margin-bottom: 0; font-weight: 600; color:#0E7ABF; font-family: 'CHEDROS', sans-serif;">
+                        ¡Infórmate más!
+                    </h1>
+                    <p style="margin-top: 0; font-weight: 600;">
+                        Para obtener información sobre nuestros eventos y causas:
+                    </p>
                     <div>
-                        <a href="https://docs.google.com/forms/d/1GETGDh98FRssVvKgkOdyaxX59Mfr9BymFeamcU_9RXQ/edit">
+                        <a href="https://docs.google.com/forms/d/1GETGDh98FRssVvKgkOdyaxX59Mfr9BymFeamcU_9RXQ/edit" target="_blank">
                             <button type="button" class="w3-button w3-padding-large w3-border susbut">Suscríbete</button>
                         </a>
                     </div>
