--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Nirsa - Sobre Nosotros</title>
+    <title>Mares Limpios - Sobre Nosotros</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -18,7 +18,6 @@
         <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button">X</a>
         <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">Inicio</a>
         <a href="sobrenosotros.html" onclick="w3_close()" class="w3-bar-item w3-button">Sobre Nosotros</a>
-        <a href="sobrenosotros.html#proyectos" onclick="w3_close()" class="w3-bar-item w3-button">Proyectos</a>
     </nav>
 
     <!-- Top menu -->
@@ -51,9 +50,9 @@
         </div>
 
         <div style="text-align: center;">
-            <iframe id="video" src="https://www.youtube.com/embed/AZMaADmrTQc?autoplay=1&mute=1"></iframe>
+            <iframe id="video" src="https://www.youtube.com/embed/EvoDzs-MbcE?start=6024&autoplay=1&mute=1"></iframe>
         </div>
-        
+
         <div id="misionvision" style="background-image: url('static/images/burbujas.svg');">
             <p>
                 En <strong>Mares Limpios</strong> buscamos ser vínculo entre proyectos de reducción
@@ -62,37 +61,54 @@
             </p>
         </div>
 
+        <div id="agregarproyecto">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSd6n3hWMT_YzeoP4FCxHvzjSurf4MpSw5do8ldIvANEdL-t4Q/viewform?usp=sf_link" target="_blank">
+                <button id="conoceproyectos" class="w3-button" style="margin: 0;">Agregar mi proyecto</button>
+            </a>
+        </div>
+
         <div id="proyectos">
             <div
                 style="background-image: url(static/images/proyectos/burbujas\ proyectos.png); background-size: 100%; text-align: center;">
                 <img src="static/images/proyectos/proyectos titulo.png" width="45%" style="padding-bottom: 3%;">
             </div>
             <div id="proyectosgrid">
-                <a href="https://tunacons.org/fishing-plastic/"><img src="static/images/proyectos/pescando plasticos.png"
-                        width="100%"></a>
-                <a href="https://tunacons.org/galapagos-cooperation/"><img
-                        src="static/images/proyectos/recoleccion de plantados.png" width="100%"></a>
-                <a href="https://contamoscontigoecuador.com/"><img src="static/images/proyectos/campamento tortuguero.png"
-                        width="100%"></a>
-                <a href="https://www.facebook.com/UPacificoEC/videos/webinars-upacifico-investiga/200149392012152/"><img
-                        src="static/images/proyectos/programa de monitoreo.png" width="100%"></a>
-                <a href="https://web.upacifico.edu.ec/plasticos-galapagos/"><img
-                        src="static/images/proyectos/aportes de plasticos.png" width="100%"></a>
-                <a href="http://www.conaccechaplains.org/"><img src="static/images/proyectos/guardianes del oceano.png"
-                        width="100%"></a>
-                <a href="http://www.amcorpinternational.com/"><img src="static/images/proyectos/comedores comunitarios.png"
-                        width="100%"></a>
-                <a href="http://www.amcorpinternational.com/"><img src="static/images/proyectos/robotica sin fronteras.png"
-                        width="100%"></a>
-                <a href="http://www.amcorpinternational.com/"><img src="static/images/proyectos/reciclacomunidad.png"
-                        width="100%"></a>
-                <a href="https://web.upacifico.edu.ec/editorial/"><img src="static/images/proyectos/coleccion pacifico.png"
-                        width="100%"></a>
-                <a
-                    href="https://www.instagram.com/reel/Ctt6rySOUcX/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA%3D%3D"><img
-                        src="static/images/proyectos/juanchatienda.png" width="100%"></a>
-                <a href="https://academiadeloceano.com/"><img src="static/images/proyectos/academia del oceano.png"
-                        width="100%"></a>
+                <a href="https://tunacons.org/fishing-plastic/" target="_blank">
+                    <img src="static/images/proyectos/pescando plasticos.png" width="100%">
+                </a>
+                <a href="https://tunacons.org/galapagos-cooperation/" target="_blank">
+                    <img src="static/images/proyectos/recoleccion de plantados.png" width="100%">
+                </a>
+                <a href="https://www.instagram.com/contamoscontigoecuador/" target="_blank">
+                    <img src="static/images/proyectos/campamento tortuguero.png" width="100%">
+                </a>
+                <a href="https://www.facebook.com/UPacificoEC/videos/webinars-upacifico-investiga/200149392012152/" target="_blank">
+                    <img src="static/images/proyectos/programa de monitoreo.png" width="100%">
+                </a>
+                <a href="https://web.upacifico.edu.ec/plasticos-galapagos/" target="_blank">
+                    <img src="static/images/proyectos/aportes de plasticos.png" width="100%">
+                </a>
+                <a href="http://www.conaccechaplains.org/" target="_blank">
+                    <img src="static/images/proyectos/guardianes del oceano.png" width="100%">
+                </a>
+                <a href="http://www.amcorpinternational.com/" target="_blank">
+                    <img src="static/images/proyectos/comedores comunitarios.png" width="100%">
+                </a>
+                <a href="http://www.amcorpinternational.com/" target="_blank">
+                    <img src="static/images/proyectos/robotica sin fronteras.png" width="100%">
+                </a>
+                <a href="http://www.amcorpinternational.com/" target="_blank">
+                    <img src="static/images/proyectos/reciclacomunidad.png" width="100%">
+                </a>
+                <a href="https://web.upacifico.edu.ec/editorial/" target="_blank">
+                    <img src="static/images/proyectos/coleccion pacifico.png" width="100%">
+                </a>
+                <a href="https://www.instagram.com/reel/Ctt6rySOUcX/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA%3D%3D" target="_blank">
+                    <img src="static/images/proyectos/juanchatienda.png" width="100%">
+                </a>
+                <a href="https://academiadeloceano.com/" target="_blank">
+                    <img src="static/images/proyectos/academia del oceano.png" width="100%">
+                </a>
             </div>
         </div>
 
@@ -105,13 +121,14 @@
                 <img src="static/images/logo footer.png">
                 <div>
                     <h1 style="margin-bottom: 0; font-weight: 600; color:#0E7ABF; font-family: 'CHEDROS', sans-serif;">
-                        ¡Infórmate más!</h1>
-                    <p style="margin-top: 0; font-weight: 600;">Para obtener información sobre nuestros eventos y
-                        causas:</p>
+                        ¡Infórmate más!
+                    </h1>
+                    <p style="margin-top: 0; font-weight: 600;">
+                        Para obtener información sobre nuestros eventos y causas:
+                    </p>
                     <div>
-                        <a href="https://docs.google.com/forms/d/1GETGDh98FRssVvKgkOdyaxX59Mfr9BymFeamcU_9RXQ/edit">
-                            <button type="button"
-                                class="w3-button w3-padding-large w3-border susbut">Suscríbete</button>
+                        <a href="https://docs.google.com/forms/d/1GETGDh98FRssVvKgkOdyaxX59Mfr9BymFeamcU_9RXQ/edit" target="_blank">
+                            <button type="button" class="w3-button w3-padding-large w3-border susbut">Suscríbete</button>
                         </a>
                     </div>
                 </div>
