--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-right" id="mySidebar">
         <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button">X</a>
         <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">Inicio</a>
-        <a href="sobrenosotros.html" onclick="w3_close()" class="w3-bar-item w3-button">Sobre Nosotros</a>
+        <a href="proyectos.html" onclick="w3_close()" class="w3-bar-item w3-button">Proyectos</a>
     </nav>
 
     <!-- Top menu -->
@@ -39,7 +39,7 @@
             <img class="w3-image" src="static/images/peces.png" width="1500">
             <div class="w3-display-middle" id="bannerelem">
                 <h1 class="titulo" style="color: #FFF;">Mares Limpios</h1>
-                <a href="sobrenosotros.html#proyectos">
+                <a href="proyectos.html#proyectos">
                     <button id="conoceproyectos" class="w3-button">Conoce los proyectos</button>
                 </a>
                 <img style="margin-top: 5%;" src="static/images/statistics.svg" width="100%">
