--- a/proyectos.html
+++ b/proyectos.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Mares Limpios - Sobre Nosotros</title>
+    <title>Mares Limpios - Proyectos</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -17,7 +17,7 @@
     <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-right" id="mySidebar">
         <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button">X</a>
         <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">Inicio</a>
-        <a href="sobrenosotros.html" onclick="w3_close()" class="w3-bar-item w3-button">Sobre Nosotros</a>
+        <a href="proyectos.html" onclick="w3_close()" class="w3-bar-item w3-button">Proyectos</a>
     </nav>
 
     <!-- Top menu -->
